# hcdviz

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  loader.mjs
.cargo/: config.toml.example
.github/workflows/: deploy-pages.yml
src/: camera.rs  connectivity.rs  connector.rs  datasheet.rs  display.rs  doc.rs  frame.rs  geometry.rs  hierarchy.rs  joints.rs  kinematics.rs  lib.rs  loop_solver.rs  main.rs  mem_assets.rs  network.rs  open.rs  physical.rs  pick.rs  scene.rs  standalone_connectivity.rs  stl.rs  tests.rs  ui.rs  web_clipboard.rs
tests/: articulation.rs  collision_meshes.rs  connector_highlight.rs  four_bar_example_solves.rs  frames.rs  load_status.rs  loop_closure.rs  mem_asset_pipeline.rs  network.rs  open_transactional.rs  picking.rs  sensors.rs  startup_bundle.rs  states.rs  toggle_groups.rs
